--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Calliterra/vendor/spdlog"]
 	path = Calliterra/vendor/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "Calliterra/vendor/imgui"]
+	path = Calliterra/vendor/imgui
+	url = https://github.com/Yhariin/imgui.git
